--- a/Cloner/.project
+++ b/Cloner/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Cloner</name>
+	<name>ExactClones</name>
 	<comment></comment>
 	<projects>
 	</projects>
